--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -1,8 +1,8 @@
-# Build
+# Build Stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ../src/custom-api .
-RUN dotnet publish -c Release -o /app/publish
+COPY ../src/custom-api/ /src/custom-api/
+RUN dotnet publish /src/custom-api/custom-api.csproj -c Release -o /app/publish
 
 # Runtime Stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
