--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,10 +63,12 @@ jobs:
       - name: Push Docker image to Amazon ECR
         run: docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
 
+      - name: Save image tag to file
+        run: echo $IMAGE_TAG > image-tag.txt
+
       - name: Upload image tag artifact
         uses: actions/upload-artifact@v4
         with:
           name: image-tag
-          path: |
-            image-tag.txt
-        run: echo $IMAGE_TAG > image-tag.txt
+          path: image-tag.txt
+
