--- a/.github/workflows/infra-provisioning.yml
+++ b/.github/workflows/infra-provisioning.yml
@@ -47,27 +47,32 @@ jobs:
         working-directory: infra
         run: terraform init
 
-      - name: Terraform Apply
+      - name: Terraform Apply or Destroy
         working-directory: infra
         run: |
           COLOR="${{ github.event.inputs.color }}"
           ACTION="${{ github.event.inputs.action }}"
 
+          # Map color to the correct TG ARN (stored as GitHub secrets for security)
           if [[ "$COLOR" == "blue" ]]; then
             TG_ARN="${{ secrets.TG_BLUE_ARN }}"
           else
             TG_ARN="${{ secrets.TG_GREEN_ARN }}"
           fi
 
-          echo "Target Group ARN: $TG_ARN"
+          echo "Deployment color: $COLOR"
+          echo "Target group: $TG_ARN"
 
           if [[ "$ACTION" == "destroy" ]]; then
             terraform destroy -auto-approve -input=false \
+              -var="deployment_color=$COLOR" \
               -var="active_target_group=$TG_ARN" \
               -var-file="terraform.tfvars"
           else
             terraform apply -auto-approve -input=false \
+              -var="deployment_color=$COLOR" \
               -var="active_target_group=$TG_ARN" \
               -var-file="terraform.tfvars"
           fi
+
 
