--- a/.github/workflows/infra-provisioning.yml
+++ b/.github/workflows/infra-provisioning.yml
@@ -47,32 +47,71 @@ jobs:
         working-directory: infra
         run: terraform init
 
-      - name: Terraform Apply or Destroy
+      - name: Terraform Apply or Destroy (Service)
         working-directory: infra
         run: |
           COLOR="${{ github.event.inputs.color }}"
           ACTION="${{ github.event.inputs.action }}"
 
-          # Map color to the correct TG ARN (stored as GitHub secrets for security)
           if [[ "$COLOR" == "blue" ]]; then
             TG_ARN="${{ secrets.TG_BLUE_ARN }}"
           else
             TG_ARN="${{ secrets.TG_GREEN_ARN }}"
           fi
 
-          echo "Deployment color: $COLOR"
-          echo "Target group: $TG_ARN"
+          echo "Deploying service to $COLOR with TG: $TG_ARN"
 
           if [[ "$ACTION" == "destroy" ]]; then
             terraform destroy -auto-approve -input=false \
               -var="deployment_color=$COLOR" \
               -var="active_target_group=$TG_ARN" \
               -var-file="terraform.tfvars"
-          else
-            terraform apply -auto-approve -input=false \
-              -var="deployment_color=$COLOR" \
-              -var="active_target_group=$TG_ARN" \
-              -var-file="terraform.tfvars"
+            exit 0
           fi
 
+          terraform apply -auto-approve -input=false \
+            -var="deployment_color=$COLOR" \
+            -var="active_target_group=$TG_ARN" \
+            -var-file="terraform.tfvars"
 
+      - name: Wait for target group to become healthy
+        run: |
+          TG_ARN="${{ github.event.inputs.color == 'blue' && secrets.TG_BLUE_ARN || secrets.TG_GREEN_ARN }}"
+          echo "Waiting for healthy target in $TG_ARN"
+
+          for i in {1..30}; do
+            STATE=$(aws elbv2 describe-target-health \
+              --target-group-arn "$TG_ARN" \
+              --query 'TargetHealthDescriptions[0].TargetHealth.State' \
+              --output text)
+
+            echo "Target state: $STATE"
+
+            if [[ "$STATE" == "healthy" ]]; then
+              echo "Target is healthy."
+              exit 0
+            fi
+
+            sleep 10
+          done
+
+          echo "Timeout: Target group never became healthy"
+          exit 1
+
+      - name: Terraform Apply (Listener Switch)
+        working-directory: infra
+        run: |
+          COLOR="${{ github.event.inputs.color }}"
+
+          if [[ "$COLOR" == "blue" ]]; then
+            TG_ARN="${{ secrets.TG_BLUE_ARN }}"
+          else
+            TG_ARN="${{ secrets.TG_GREEN_ARN }}"
+          fi
+
+          echo "Switching ALB listener to point to $COLOR"
+
+          terraform apply -auto-approve -input=false \
+            -var="deployment_color=$COLOR" \
+            -var="active_target_group=$TG_ARN" \
+            -var-file="terraform.tfvars"
