--- a/.github/workflows/infra-provisioning.yml
+++ b/.github/workflows/infra-provisioning.yml
@@ -26,9 +26,6 @@ jobs:
       - name: Set deployment color
         run: |
           COLOR="${{ github.event.inputs.color }}"
-          if [[ -z "$COLOR" ]]; then
-            COLOR="blue"
-          fi
           echo "COLOR=$COLOR" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
@@ -47,7 +44,7 @@ jobs:
         working-directory: infra
         run: terraform init
 
-      - name: Terraform Apply or Destroy (Service)
+      - name: Terraform Apply or Destroy (ECS Service only)
         working-directory: infra
         run: |
           COLOR="${{ github.event.inputs.color }}"
@@ -59,7 +56,9 @@ jobs:
             TG_ARN="${{ secrets.TG_GREEN_ARN }}"
           fi
 
-          echo "Deploying service to $COLOR with TG: $TG_ARN"
+          echo "TG_ARN=$TG_ARN" >> $GITHUB_ENV
+
+          echo "Deploying ECS service to $COLOR (TG: $TG_ARN)"
 
           if [[ "$ACTION" == "destroy" ]]; then
             terraform destroy -auto-approve -input=false \
@@ -76,8 +75,7 @@ jobs:
 
       - name: Wait for target group to become healthy
         run: |
-          TG_ARN="${{ github.event.inputs.color == 'blue' && secrets.TG_BLUE_ARN || secrets.TG_GREEN_ARN }}"
-          echo "Waiting for healthy target in $TG_ARN"
+          echo "Waiting for targets in TG: $TG_ARN to become healthy..."
 
           for i in {1..30}; do
             STATE=$(aws elbv2 describe-target-health \
@@ -85,31 +83,27 @@ jobs:
               --query 'TargetHealthDescriptions[0].TargetHealth.State' \
               --output text)
 
-            echo "Target state: $STATE"
+            echo "Target health state: $STATE"
 
             if [[ "$STATE" == "healthy" ]]; then
               echo "Target is healthy."
               exit 0
             fi
 
+            echo "Waiting for 10 seconds..."
             sleep 10
           done
 
-          echo "Timeout: Target group never became healthy"
+          echo "Timed out: Target group never became healthy"
           exit 1
 
-      - name: Terraform Apply (Listener Switch)
+      - name: Terraform Apply (ALB Listener Switch)
         working-directory: infra
         run: |
           COLOR="${{ github.event.inputs.color }}"
+          TG_ARN="$TG_ARN"
 
-          if [[ "$COLOR" == "blue" ]]; then
-            TG_ARN="${{ secrets.TG_BLUE_ARN }}"
-          else
-            TG_ARN="${{ secrets.TG_GREEN_ARN }}"
-          fi
-
-          echo "Switching ALB listener to point to $COLOR"
+          echo "Switching ALB listener to $COLOR (TG: $TG_ARN)"
 
           terraform apply -auto-approve -input=false \
             -var="deployment_color=$COLOR" \
