--- a/.github/workflows/infra-provisioning.yml
+++ b/.github/workflows/infra-provisioning.yml
@@ -75,27 +75,39 @@ jobs:
 
       - name: Wait for target group to become healthy
         run: |
+          COLOR="${{ github.event.inputs.color }}"
+          if [[ "$COLOR" == "blue" ]]; then
+            TG_ARN="${{ secrets.TG_BLUE_ARN }}"
+          else
+            TG_ARN="${{ secrets.TG_GREEN_ARN }}"
+          fi
+
+          echo "Waiting 30s to ensure ECS service registers with TG..."
+          sleep 30
+
           echo "Waiting for targets in TG: $TG_ARN to become healthy..."
 
           for i in {1..30}; do
             STATE=$(aws elbv2 describe-target-health \
               --target-group-arn "$TG_ARN" \
               --query 'TargetHealthDescriptions[0].TargetHealth.State' \
-              --output text)
-
-            echo "Target health state: $STATE"
+              --output text 2>/dev/null || echo "not_found")
 
             if [[ "$STATE" == "healthy" ]]; then
               echo "Target is healthy."
               exit 0
+            elif [[ "$STATE" == "not_found" ]]; then
+              echo "Target group not found yet. Waiting..."
+            else
+              echo "Target state: $STATE"
             fi
 
-            echo "Waiting for 10 seconds..."
             sleep 10
           done
 
-          echo "Timed out: Target group never became healthy"
+          echo "Timeout: Target group never became healthy"
           exit 1
+
 
       - name: Terraform Apply (ALB Listener Switch)
         working-directory: infra
